<resources>
    <string name="app_name">Movie Cata</string>
    <string name="movie">Movie</string>
    <string name="series">Series</string>
    <string name="title">Title</string>
    <string name="description_movie">Description</string>
    <string name="description">Description</string>
    <string name="image_splash">splash</string>
    <string name="moviefav">Favorite Movie</string>
    <string name="seriesfav">Favorite Series</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="menu_detail">Detail Menu</string>
    <string name="fav_empty">Empty List, please like at least 1 Movie</string>
    <string name="fav2_empty">Empty List, please like at least 1 Tv Show</string>
    <string name="detail">Detail Movie</string>
    <string name="detail2">Detail TvShow</string>
    <string name="message_ok">Yes</string>
    <string name="message_undo">Undo Remove?</string>
</resources>